<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_profile">

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.app.mygym.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_qr"
        android:name="com.app.mygym.ui.qr.QRFragment"
        android:label="@string/title_qr"
        tools:layout="@layout/fragment_qr" />

    <fragment
        android:id="@+id/navigation_routines"
        android:name="com.app.mygym.ui.routine.RoutineFragment"
        android:label="@string/title_routines"
        tools:layout="@layout/list_routine" />
</navigation>